@@ -1,5 +1,8 @@
 2010-11-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR debug/46252
+	* gcc.dg/pr46252.c: New test.
+
 	PR rtl-optimization/46034
 	PR rtl-optimization/46212
 	PR rtl-optimization/46248
